# dod

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_detection.py
engine/: __init__.py  object_detection.py
sod/: small.py
