[project]
name = "drone-object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "djitellopy",
    "cvzone",
    "sahi",
    "ultralytics",
    "torch",
    "torchvision"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["models*", "sod*"]
